
/* Class = "UITabBarItem"; title = "Generate"; ObjectID = "Dip-om-eee"; */
"Dip-om-eee.title" = "Generate";

/* Class = "UITextField"; placeholder = "Content of the code"; ObjectID = "DwH-hJ-Ipd"; */
"DwH-hJ-Ipd.placeholder" = "Content of the code";

/* Class = "UINavigationController"; title = "Navigation"; ObjectID = "GAg-Vh-DJw"; */
"GAg-Vh-DJw.title" = "Navigation";

/* Class = "UITabBarItem"; title = "Item"; ObjectID = "Un4-9b-sBJ"; */
"Un4-9b-sBJ.title" = "Item";

/* Class = "UIButton"; normalTitle = "Export generated code"; ObjectID = "X4f-wI-1Pm"; */
"X4f-wI-1Pm.normalTitle" = "Share";

/* Class = "UITabBarItem"; title = "Generate"; ObjectID = "YWT-57-rL4"; */
"YWT-57-rL4.title" = "Generate";

/* Class = "UIButton"; normalTitle = "Generate QR-code"; ObjectID = "aBE-FK-kol"; */
"aBE-FK-kol.normalTitle" = "Generate code";

/* Class = "UINavigationItem"; title = "Generate"; ObjectID = "hFD-uy-cC7"; */
"hFD-uy-cC7.title" = "Generate";

/* Class = "UIBarButtonItem"; title = "About"; ObjectID = "jbV-8l-EOS"; */
"jbV-8l-EOS.title" = "History";

/* Class = "UIBarButtonItem"; title = "About"; ObjectID = "mbM-68-iH4"; */
"mbM-68-iH4.title" = "Settings";

/* Class = "UILabel"; text = "No code generated yet"; ObjectID = "njC-gD-BiU"; */
"njC-gD-BiU.text" = "No code generated yet";

/* Generate View Controller */

/* XY Items left placeholder */
"ZNT-9e-QHC.text" = "XYZ charaters left";
/* Templates Button */
"yyP-HG-gaD.contentConfiguration.text" = "Templates";
/* Use last Templazte Button */
"qXI-71-Ho1.contentConfiguration.text" = "Use last template again";

/* Templates View Controller */
/* Title */
"ygU-Zj-EFm.title" = "Templates";
/* Close Button */
"Z2y-HK-CYq.title" = "Close";
/* Template Name Placeholder */
"XNl-he-7ff.text" = "TEMPLATE_NAME";

/* Enter Data to Template View Controller */
/* Title */
"wRj-ek-yHH.title" = "Enter Data";
/* Close Button */
"Ueu-BN-pe5.title" = "Close";
/* Segmented Control */
"snB-Sp-SAz.segmentTitles[0]" = "PLACEHOLDER";
"snB-Sp-SAz.segmentTitles[1]" = "PLACEHOLDER";
/* Generate Button */
"aBE-FK-kol.configuration.title" = "Generate Code";
