<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QyC-YC-d4w">
    <device id="retina4_7" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Scannen-->
        <scene sceneID="Hav-R8-dkw">
            <objects>
                <viewController title="Scannen" id="YYb-AG-PfO" customClass="ScanViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="OMD-Mb-ige">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="nAa-mU-17H"/>
                    </view>
                    <navigationItem key="navigationItem" title="Scannen" id="jMO-wS-otb">
                        <barButtonItem key="rightBarButtonItem" title="About" image="History-Icon" id="BoW-jw-h2c">
                            <connections>
                                <segue destination="1HA-vA-qik" kind="popoverPresentation" identifier="showHistory" popoverAnchorBarButtonItem="BoW-jw-h2c" id="gAo-6R-rug">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <segue destination="eWd-Zz-orO" kind="presentation" identifier="resultSegue" id="Dq6-Oj-fE6"/>
                        <segue destination="3VH-yp-5Jc" kind="show" identifier="errorSegue" id="2Gd-T9-l2o"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wP5-YN-7cU" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1383.2" y="139.880059970015"/>
        </scene>
        <!--History-->
        <scene sceneID="Qi2-9w-ihX">
            <objects>
                <viewControllerPlaceholder storyboardName="History" id="1HA-vA-qik" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7ZN-1B-wfi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1920" y="139"/>
        </scene>
        <!--Result-->
        <scene sceneID="auR-Ud-BNn">
            <objects>
                <viewController title="Result" id="eWd-Zz-orO" customClass="ScanResultViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="G6n-uK-Avv">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RcF-I1-aFd">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="EhM-gj-O7u"/>
                                </constraints>
                                <items>
                                    <navigationItem title="Ergebnis" id="weY-8y-NRz">
                                        <barButtonItem key="leftBarButtonItem" title="Schließen" style="done" id="qYL-yu-zT8">
                                            <connections>
                                                <action selector="dismiss:" destination="eWd-Zz-orO" id="WrB-gb-fTM"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6H9-5X-CJh">
                                <rect key="frame" x="8" y="93" width="359" height="546"/>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inhalt des gescannten QR Codes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibm-qI-zCd">
                                <rect key="frame" x="12" y="64" width="351" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="trailing" secondItem="ibm-qI-zCd" secondAttribute="trailing" constant="12" id="ATF-sH-6wq"/>
                            <constraint firstItem="RcF-I1-aFd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" id="M0L-Xr-Rxj"/>
                            <constraint firstItem="RcF-I1-aFd" firstAttribute="trailing" secondItem="A3K-Jk-KN9" secondAttribute="trailing" id="N95-Rt-INc"/>
                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="bottom" secondItem="6H9-5X-CJh" secondAttribute="bottom" constant="8" id="VII-xQ-mLu"/>
                            <constraint firstItem="RcF-I1-aFd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" id="YeS-QJ-tkH"/>
                            <constraint firstItem="6H9-5X-CJh" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" constant="8" id="cja-5s-vTv"/>
                            <constraint firstItem="6H9-5X-CJh" firstAttribute="top" secondItem="ibm-qI-zCd" secondAttribute="bottom" constant="8" id="fuG-rp-tmo"/>
                            <constraint firstItem="RcF-I1-aFd" firstAttribute="trailing" secondItem="A3K-Jk-KN9" secondAttribute="trailing" id="jLr-cZ-Eft"/>
                            <constraint firstItem="ibm-qI-zCd" firstAttribute="top" secondItem="RcF-I1-aFd" secondAttribute="bottom" constant="8" id="kfi-CC-zdh"/>
                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="trailing" secondItem="6H9-5X-CJh" secondAttribute="trailing" constant="8" id="mr7-nG-0N0"/>
                            <constraint firstItem="RcF-I1-aFd" firstAttribute="top" secondItem="A3K-Jk-KN9" secondAttribute="top" id="n6D-MB-Z7w"/>
                            <constraint firstItem="ibm-qI-zCd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" constant="12" id="qUK-m0-yjl"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="A3K-Jk-KN9"/>
                    </view>
                    <connections>
                        <outlet property="resultTextView" destination="6H9-5X-CJh" id="2A2-te-dNn"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4RW-e2-Qxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1786" y="907"/>
        </scene>
        <!--Fehlende Berechtigungen-->
        <scene sceneID="Dc4-PD-hHh">
            <objects>
                <viewController title="Fehlende Berechtigungen" id="3VH-yp-5Jc" customClass="ScanRequestAccessViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="dsH-9f-gTw">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitte aktiviere den Kamera  Zugriff in den Einstellungen" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVk-Qb-PIK">
                                <rect key="frame" x="16" y="313" width="343" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="EVk-Qb-PIK" firstAttribute="centerX" secondItem="dsH-9f-gTw" secondAttribute="centerX" id="DYN-7O-rEb"/>
                            <constraint firstAttribute="trailing" secondItem="EVk-Qb-PIK" secondAttribute="trailing" constant="16" id="PHF-7K-lQT"/>
                            <constraint firstItem="EVk-Qb-PIK" firstAttribute="centerY" secondItem="dsH-9f-gTw" secondAttribute="centerY" id="krN-j6-F1C"/>
                            <constraint firstItem="EVk-Qb-PIK" firstAttribute="leading" secondItem="BRo-WH-rhg" secondAttribute="leading" constant="16" id="qpP-lB-U1h"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="BRo-WH-rhg"/>
                    </view>
                    <navigationItem key="navigationItem" id="JkF-6E-81G"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uHl-Ds-42f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1004" y="908"/>
        </scene>
        <!--Scannen-->
        <scene sceneID="k4V-D7-HIM">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QyC-YC-d4w" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Scannen" image="qrcode.viewfinder" catalog="system" id="asb-Jf-rcb"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cU5-or-OwN">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="YYb-AG-PfO" kind="relationship" relationship="rootViewController" id="Ko5-jm-UK9"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6mj-XY-AzU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="444" y="139.880059970015"/>
        </scene>
    </scenes>
    <resources>
        <image name="History-Icon" width="25" height="25"/>
        <image name="qrcode.viewfinder" catalog="system" width="128" height="114"/>
    </resources>
</document>
