...
/* WiFi Template */
"wifi_template" = "WiFi login data";
"wifi_security" = "Security of the WiFi network";
"wifi_name" = "Name of the WiFi network";
"wifi_password" = "Password of the WiFi network";
/* E-Mail Template */
"email_template" = "Email address";
"email_address" = "Email address";
/* Phone Template */
"phone_template" = "Phone call";
"phone_number" = "Phone number";
/* Message Template */
"message_template" = "Phone message";
...
/* Settings */
"SETTINGS_DEVELOPER_GREETING" = "Created with ❤️ in Trier";

/* Tab Selection */
"TAB_SELECTION_HEADER" = "Default tab";
"TAB_GENERATE" = "Generate";
"TAB_SCAN" = "Scan";
"TAB_SELECTION_FOOTER" = "Here you can select which tab should be loaded when starting myQRcode.";

